add generate_stats() and include ONS age data

--- a/inst/rmarkdown/templates/myrmidon2/skeleton/scss/_colours.scss
+++ b/inst/rmarkdown/templates/myrmidon2/skeleton/scss/_colours.scss
@@ -1,5 +1,5 @@
 body {
-  --my-cyan: rgb(30, 240, 240);;
+  --my-cyan: rgb(30, 240, 240);
   --my-grey: rgb(52, 52, 65);
   --turquoise-grey: rgb(59, 121, 152);
   --grape-purple: rgb(79, 29, 115);
